2015-09-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Code clean-up; fix MinGW-Bug [#2263].

	* include/w32api.h (__AW_SUFFIXED__): New macro; define it.
	(__AW_EXTENDED__, __AW_STRING_A__, __AW_STRING_W__): Likewise.
	(__AW__WCHAR_T__): Likewise; this is a helper for __AW_STRING_W__.

	* include/wincrypt.h: Assert copyright; tidy layout; replace all C++
	style comments, using ISO-C conforming style; remove all redundant
	parameter names from function prototype declarations, throughout.
	(pragma GCC system_header): Remove pointless conditional guard.
	(_BEGIN_C_DECLS, _END_C_DECLS): Use to wrap extern "C" declarations.
	[WINVER >= 0x500, WINVER >= 0x501]: Replace conditionals with...
	[WINVER >= _WIN32_WINNT_WIN2K, WINVER >= _WIN32_WINNT_WINXP]: ...these
	alternatives, respectively; they offer improved self-documentation.
	(MS_DEF_PROV, MS_ENHANCED_PROV, MS_STRONG_PROV, MS_SCARD_PROV)
	(MS_DEF_RSA_SIG_PROV, MS_DEF_RSA_SCHANNEL_PROV, MS_DEF_DSS_PROV)
	(MS_DEF_DSS_DH_PROV, MS_ENH_DSS_DH_PROV, MS_DEF_DH_SCHANNEL_PROV)
	(MS_ENH_RSA_AES_PROV): Redefine as __AW_EXTENDED__ derivatives.
	(MS_DEF_PROV_W, MS_ENHANCED_PROV_W, MS_STRONG_PROV_W, MS_SCARD_PROV_W)
	(MS_DEF_RSA_SIG_PROV_W, MS_DEF_RSA_SCHANNEL_PROV_W, MS_DEF_DSS_PROV_W)
	(MS_DEF_DSS_DH_PROV_W, MS_ENH_DSS_DH_PROV_W, MS_DEF_DH_SCHANNEL_PROV_W)
	(MS_ENH_RSA_AES_PROV_W): Redefine; use __AW_STRING_W__ to derive them
	from their __AW_STRING_A__ equivalent string constant definitions.
	(GET_ALG_CLASS): Redefine, expressing result in terms of...
	(ALG_CLASS_ALL): ...this manifest bit mask; also redefined, preferring
	a hexadecimal expression of the mask value over the former decimal.
	(GET_ALG_TYPE, GET_ALG_SID): Similarly, use hexadecimal mask values.
	(ALG_CLASS_SIGNATURE, ALG_CLASS_MSG_ENCRYPT, ALG_CLASS_DATA_ENCRYPT)
	(ALG_CLASS_HASH, ALG_CLASS_KEY_EXCHANGE, ALG_TYPE_DSS, ALG_TYPE_RSA)
	(ALG_TYPE_BLOCK, ALG_TYPE_STREAM, ALG_TYPE_DH, ALG_TYPE_SECURECHANNEL)