@@ -1,3 +1,15 @@
+2015-10-22  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Revert a failed experimental macro construct.
+
+	* include/w32api.h (__W32API_DEPRECATED_ALIAS): Delete this; it bloats
+	code, and doesn't work in the C preprocessor conditional context where
+	its associated constant definitions are most likely to be required.
+	(Windows95, Windows98, WindowsME, WindowsNT4, Windows2000, WindowsXP)
+	(Windows2003, WindowsVista, IE3, IE301, IE302, IE4, IE401, IE5, IE5a)
+	(IE5b, IE501, IE55, IE56, IE6, IE601, IE602, IE7): Redefine as macros,
+	now in terms of their preferred equivalents from <sdkddkver.h>
+
 2015-09-29  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Code clean-up; fix MinGW-Bug [#2263].
